<resources>
	<string name="app_name">Tryp Rider</string>
	<string name="tryp_schedule">Tryp Schedule</string>
	<string name="the_first_surge_free_app_that_gives_you">The first surge free app that gives you</string>
	<string name="reward_on_every_ride">reward on every ride</string>
	<string name="login">Login</string>
	<string name="i_m_new">I\'m New</string>
	<string name="estimated_amount">Estimated Amount</string>
	<string name="remind_before">Remind Before</string>
	<string name="daily_06_30_pm">Daily, 06:30 PM</string>
	<string name="choose_time">Choose Time</string>
	<string name="month">Month</string>
	<string name="week">Week</string>
	<string name="daily">Daily</string>
	<string name="tryp_later">Tryp Later</string>
	<string name="resend_sms_code">Resend SMS Code</string>
	<string name="enter_sms_code">Enter SMS Code</string>
	<string name="we_ve_sent_you_a_authentication_code">We’ve sent you a authentication code</string>
	<string name="tryp_prime">Tryp Prime</string>
	<string name="create_account">Create Account</string>
	<string name="send_code">Send Code</string>
	<string name="don_t_have_an_account">Don’t have an account?</string>
	<string name="sign_up">Sign Up</string>
	<string name="where_to">Where to?</string>
	<string name="tryp_now">Tryp Now</string>
	<string name="favorite">Favorite</string>
	<string name="on_demand">On demand</string>
	<string name="sos">SOS</string>
	<string name="confirm_booking">Confirm Booking</string>
	<string name="set_location">Set Location</string>
	<string name="united_states_of_america_1">United States of America(+1)</string>
	<string name="mobile_phone_number">Mobile Phone Number</string>
	<string name="not_a_member_yet_don_t_worry_simply_enter_your_details_below_to_get_started">Not a member yet? Don’t worry, simply enter your details below to get started</string>

	<string name="invite_friends_title">Invite Friends</string>
	<string name="invite_2_already_here">Already Here</string>
	<string name="invite_2_invite_text">Invite Friends</string>
	<string name="legal">Legal</string>
	<string name="legal_text"> A Pocket PC is a handheld computer, which features many of the same capabilities as a modern PC.
        These handy little devices allow individuals to retrieve and store e-mail messages, create a contact file, coordinate
        appointments, surf the internet, exchange text messages and more.\n\nEvery product that is labeled as a Pocket PC must be
        accompanied with specific software to operate the unit and must feature a touchscreen and touchpad. Pocket PC products
        are created by some of the world’s top computer manufacturers, including HP, Toshiba and Gateway. As is the case with
        any new technology product, the cost of a Pocket PC was substantial during it’s early release. For approximately $700.00,
        consumers could purchase one of top-of-the-line Pocket PCs in 2003. These days, customers are finding that prices have
        become much more reasonable now that the newness is wearing off. For approximately $350.00, a new Pocket PC can now be
        purchased.
    </string>
	<string name="invite_3_label">Just tap \"Ok\" when your phone asks for acces.\nWe\'ll never contact anyone without your permission</string>
	<string name="connect_facebook">Connect Facebook</string>
	<string name="invite_1_more">More…</string>
	<string name="invite_1_tv">Earning with Tryp is not just for drivers…\nShare the app and Earn .40 cents EVERY TIME they ride!</string>
	<string name="invite_1_got_friends">Got friends?</string>
	<string name="invite_1_twitter">Twitter</string>
	<string name="invite_1_whatsapp">Whatsapp</string>
	<string name="invite_1_message">Message</string>
	<string name="invite_1_share">Share Link</string>
	<string name="invite_1_invite">You have invited 5 friends and collected $ 2</string>
	<string name="not_invited_container_text">+ Invite</string>
	<string name="invited_container_text">+ Follow</string>
	<string name="search_friends_hint">Search friends</string>
	<string name="copied">Copied!</string>
	<string name="Notifications">Notifications</string>
	<string name="copy_code">Copy code</string>
	<string name="recap">Recap</string>
	<string name="recap_date_example">July \'19</string>
	<string name="recap_description_example">Your Month Rewards With Tryp</string>
	<string name="link_shared">Link Shared</string>
	<string name="account_sign_up">Account Sign Up</string>
	<string name="friends_trips">Friends Trips</string>
	<string name="help">Help</string>
	<string name="get_help_with_recent_trips">Get Help with Recent Trips</string>
	<string name="frequently_asked_questions">Frequently asked questions</string>
	<string name="terms_of_services">Terms Of Service</string>
	<string name="contact_support">Contact support</string>
	<string name="home">Home</string>
	<string name="trip_history">Trip History</string>
	<string name="payment">Payment</string>
	<string name="notification">Notification</string>
	<string name="rewards">Rewards</string>
	<string name="emergency_contact">Emergency Contact</string>
	<string name="promotion">Promotion</string>
	<string name="invite_friends">Invite Friends</string>
	<string name="about_us">About Us</string>
	<string name="logout">Logout</string>
	<string name="map">Map</string>


	<string name="confirm_message">Are you sure you want to unfavorite?</string>
	<string name="confirm">Confirm</string>
	<string name="favorite_drivers">Favorite Drivers</string>
	<string name="monthly_recaps">Monthly Recaps</string>
	<string name="influencer">Influencer</string>
	<string name="driver">Driver</string>
	<string name="learn_more">Learn More</string>

	<string name="main">Yes, It\'s weekly residual income</string>
	<string name="tip_1">Get $50 every driver your refer</string>
	<string name="image_label">Expand your hustle side</string>
	<string name="tip_2">As a Tryp Influencer, you get paid every time your referral uses our app. $50 for every driver your refer. Refer 3 drivers in your first 30 days and earn $150.</string>

	<string name="total_tryps">Total Tryps</string>
	<string name="total_distance">Total Distance</string>
	<string name="followers">Followers</string>
	<string name="reward_points">Reward Points</string>
	<string name="credits">Credits</string>

	<string name="past_trips">Past</string>
	<string name="upcoming_trips">Upcoming</string>
	<string name="ride_completed">Ride Completed</string>
	<string name="ride_sum">$45</string>
	<string name="ride_successful">You have successfully completed your ride.\nPlease collect the amount from the customer.</string>
	<string name="name_daniel">Daniel</string>
	<string name="text_minutes">15 min</string>
	<string name="customer_location_caption">Customer Location</string>
	<string name="customer_location">333 Rolling Park, New York</string>
	<string name="stop_trip_button">Stop Trip</string>
	<string name="screen_20_title">Bank Account</string>
	<string name="authorize_deposits">Authorize your deposits selection</string>
	<string name="points_sum">10,000</string>
	<string name="points_money">$25.00</string>
	<string name="washing_apt">7025 Washing Apt, Feltonport</string>
	<string name="wells_fargo">Wells fargo</string>
	<string name="checking">Checking - 6543</string>
	<string name="select_another_account">Select Another Account</string>
	<string name="authorize_button">Authorize</string>
	<string name="screen21_title">Rewards</string>
	<string name="balance">Balance</string>
	<string name="balance_points_money">$25,68</string>
	<string name="balance_points_sum">4,955</string>
	<string name="points">Points</string>
	<string name="my_rewards_title">My Rewards</string>
	<string name="my_rewards">$50,00</string>
	<string name="referred_riders">6</string>
	<string name="referred_riders_caption">Referred Riders</string>
	<string name="total_rides">4</string>
	<string name="total_rides_caption">Total Rides</string>
	<string name="withdraw_to_cash">Withdraw to Cash</string>
	<string name="my_earnings_button">My Earnings</string>
	<string name="screen22_title">Payments</string>
	<string name="add_new_method">Add new method</string>
	<string name="screen23_title">Edit Card</string>
	<string name="master_card">Master Card</string>
	<string name="card_number">****  ****  ****  9012</string>
	<string name="card_expires">08/21</string>
	<string name="save_button">Save</string>
	<string name="daniel_customer_name">Daniel Kornson</string>
	<string name="daniel_customer_rating">5.0</string>
	<string name="total_trypes">14</string>
	<string name="total_trypes_caption">Total Tryps</string>
	<string name="distance">26 km</string>
	<string name="distance_caption">Distance</string>
	<string name="ride_estimate">$ 92</string>
	<string name="ride_estimate_caption">Ride Estimate</string>
	<string name="ongoing_tryp_caption">Ongoing Tryp</string>
	<string name="ongoing_tryp_date">28 Jun, 06:30 PM</string>
	<string name="contact_button">Contact</string>
	<string name="david_test">David Test</string>
	<string name="david_test_address">333 Rolling Park, New York</string>
	<string name="home_caption">Home</string>
	<string name="home_address">7025 Washing Apt, Feltonport</string>
	<string name="tryp_prime_caption">Tryp Prime</string>
	<string name="tryp_prime_sum">$20</string>
	<string name="tryp_prime_date">28 Jun, 06:30 PM</string>
	<string name="tryp_details_caption">Tryp Details</string>
	<string name="tryp_details_from">333 Rolling Park, New York</string>
	<string name="tryp_details_to">7025 Washing Apt, Feltonport</string>
	<string name="tryp_details_date">28 Jun, 06:30 PM</string>
	<string name="customer_accept_button">Accept</string>
	<string name="customer_decline_button">Decline</string>
	<string name="screen27_title">Expense Tracking</string>
	<string name="oil_change">Oil Change</string>
	<string name="gas_fill_up">Gas Fill up</string>
	<string name="break_change">Break change</string>
	<string name="tire_change">Tire change</string>
	<string name="vehicle_service">Vehicle service</string>
	<string name="car_wash">Car Wash</string>
	<string name="car_essentials">Car essentials</string>
	<string name="report_earning_caption">Earning</string>
	<string name="report_miles_caption">Miles</string>
	<string name="screen28_title">Report</string>
	<string name="cancel_reasons">Cancel Reasons</string>
	<string name="cancel_tip">Choose appropriate cancel reason</string>
	<string name="cancel_btn_1">Driver do not pick up the call</string>
	<string name="cancel_btn_2">Waited too long for the ride</string>
	<string name="cancel_btn_3">Changed my plan</string>


	<array name="recap_graph_spinner_items">
		<item>Weekly</item>
		<item>Else</item>
	</array>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="content_description">content_description</string>
	<string name="add_a_card_text">Add a card</string>
	<string name="you_have_not_added_any_cards_yet_text">You have not added any cards yet.</string>
	<string name="payments">Payments</string>
	<string name="new_card_text">New Card</string>
	<string name="edit_card_text">Edit Card</string>
	<string name="change_card_text">Change card</string>
	<string name="delete_text">Delete</string>
	<string name="rewards_withdraw_confirmed_text">By tapping the button to proced, you authorize and provide written instructions for us to debit from your selected bank account the payment as set forth in this <b>ACH Authorization</b></string>
	<string name="bank_account_text">Bank Account</string>
	<string name="authorize_your_deposits_selection_text">Authorize your deposits selection</string>
	<string name="bt_select_another_account">Select Another Account</string>

</resources>
