<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/white">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="288dp"
		android:background="@drawable/caption_gradient"
		app:elevation="0dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="64dp"
				android:gravity="center_horizontal"
				android:text="@string/screen21_title"
				android:textColor="@android:color/white"
				android:textSize="18sp" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="27dp"
				android:gravity="center_horizontal"
				android:text="@string/balance"
				android:textColor="@android:color/white"
				android:textSize="13sp" />

			<LinearLayout
				android:id="@+id/layout_points"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="22dp"
				android:gravity="center"
				android:orientation="horizontal">

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="end"
					android:orientation="vertical">

					<TextView
						android:id="@+id/balance_points_money_textView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/balance_points_money"
						android:textAlignment="textEnd"
						android:textColor="@android:color/white"
						android:textSize="18sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/points"
						android:textAlignment="textEnd"
						android:textColor="@android:color/white"
						android:textSize="14sp" />
				</LinearLayout>

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="17dp"
					android:layout_marginEnd="17dp"
					android:src="@drawable/line_vertical" />

				<TextView
					android:id="@+id/balance_points_sum_textVIew"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/balance_points_sum"
					android:textAlignment="textStart"
					android:textColor="@android:color/white"
					android:textSize="30sp" />

			</LinearLayout>

		</LinearLayout>

	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:scrollbars="none"
		android:layout_marginBottom="80dp"
		android:overScrollMode="never">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<androidx.cardview.widget.CardView
				android:id="@+id/rewards_cardView"
				android:layout_width="match_parent"
				android:layout_height="158dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="235dp"
				android:layout_marginEnd="16dp"
				app:cardCornerRadius="8dp"
				app:cardElevation="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						android:layout_width="119dp"
						android:layout_height="wrap_content"
						android:layout_marginStart="22dp"
						android:layout_marginTop="17dp"
						android:layout_weight="1"
						android:text="@string/my_rewards_title"
						android:textAlignment="textStart"
						android:textColor="@android:color/black"
						android:textSize="18sp" />

					<TextView
						android:id="@+id/my_rewards_money_textView"
						android:layout_width="119dp"
						android:layout_height="wrap_content"
						android:layout_marginTop="17dp"
						android:layout_marginEnd="16dp"
						android:text="@string/my_rewards"
						android:textAlignment="textEnd"
						android:textColor="@android:color/black"
						android:textSize="18sp" />

				</LinearLayout>

				<ProgressBar
					android:id="@+id/rewards_progress_bar"
					style="@style/Widget.AppCompat.ProgressBar.Horizontal"
					android:layout_width="match_parent"
					android:layout_height="16dp"
					android:layout_marginStart="16dp"
					android:layout_marginTop="62dp"
					android:layout_marginEnd="16dp"
					android:max="50"
					android:min="0"
					android:progress="26"
					android:progressDrawable="@drawable/progress_bar_back" />

				<RelativeLayout
					android:id="@+id/label_layout"
					android:layout_width="80dp"
					android:layout_height="60dp"
					android:layout_marginStart="16dp"
					android:layout_marginEnd="16dp"
					android:layout_gravity="center_horizontal"
					android:layout_marginTop="78dp"
					android:background="@drawable/label_progress"
					android:gravity="center">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="$25,68"
						android:textColor="@android:color/white"
						android:textSize="14sp" />

				</RelativeLayout>

			</androidx.cardview.widget.CardView>

			<androidx.cardview.widget.CardView
				android:id="@+id/rides_cardView"
				android:layout_width="match_parent"
				android:layout_height="105dp"
				android:layout_marginStart="16dp"
				android:layout_marginTop="408dp"
				android:layout_marginEnd="16dp"
				app:cardCornerRadius="8dp"
				app:cardElevation="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="105dp"

					android:orientation="horizontal"
					android:gravity="center">

					<LinearLayout
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_gravity="center"
						android:gravity="center"
						android:layout_weight="1">

						<TextView
							android:id="@+id/referred_riders_textView"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/referred_riders"
							android:textSize="30sp"
							android:textColor="@android:color/black"/>

						<TextView
							android:id="@+id/referred_riders_caption"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/referred_riders_caption"
							android:textSize="13sp"
							android:textAlignment="center"
							android:textColor="#828282" />

					</LinearLayout>

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/splitter"
						android:layout_gravity="center"/>

					<LinearLayout
						android:layout_width="100dp"
						android:layout_height="wrap_content"
						android:orientation="vertical"
						android:layout_gravity="center"
						android:gravity="center"
						android:layout_weight="1">

						<TextView
							android:id="@+id/total_rides_textView"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/total_rides"
							android:textSize="30sp"
							android:textColor="@android:color/black"/>

						<TextView
							android:id="@+id/total_rides_caption"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/total_rides_caption"
							android:textSize="13sp"
							android:textAlignment="center"
							android:textColor="#828282" />

					</LinearLayout>

				</LinearLayout>

			</androidx.cardview.widget.CardView>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/withdraw_to_cash"
				android:layout_marginTop="31dp"
				android:layout_centerHorizontal="true"
				android:layout_below="@id/rides_cardView"
				android:textColor="#0172FF"
				android:textSize="13sp"
				android:layout_marginBottom="16dp"/>

		</RelativeLayout>

	</ScrollView>
	<ImageButton
		android:id="@+id/back_btn"
		android:layout_width="@dimen/map_navigation_btn_size"
		android:layout_height="@dimen/map_navigation_btn_size"
		android:background="@drawable/circle_button"
		android:clickable="true"
		android:elevation="5dp"
		android:focusable="true"
		android:layout_gravity="bottom|start"
		android:layout_marginStart="32dp"
		android:layout_marginBottom="32dp"
		android:layout_alignParentBottom="true"
		android:src="@drawable/ic_keyboard_backspace_black_24dp" />


	<!--<com.google.android.material.button.MaterialButton-->
	<!--android:id="@+id/my_earnings_button"-->
	<!--style="@style/AppTheme.Button"-->
	<!--android:layout_width="200dp"-->
	<!--android:layout_height="56dp"-->
	<!--android:layout_marginEnd="32dp"-->
	<!--android:layout_gravity="bottom|end"-->
	<!--android:layout_marginBottom="16dp"-->
	<!--android:text="@string/my_earnings_button"-->
	<!--android:letterSpacing="0" />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>

