<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:background="@color/white"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:id="@+id/layoutNoCards"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center"
			android:padding="8dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent">

			<ImageView
				android:layout_width="60dp"
				android:layout_height="60dp"
				android:src="@drawable/vector_no_cards_icon"
				android:tint="@color/colorAccent"
				android:contentDescription="@string/content_description" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:layout_marginBottom="14dp"
				android:textAlignment="center"
				android:fontFamily="sans-serif-condensed"
				android:text="@string/you_have_not_added_any_cards_yet_text"
				android:textSize="18sp" />

			<Button
				android:id="@+id/btnAddNewCard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:backgroundTint="@color/colorAccent"
				android:textColor="@color/white"
				android:layout_margin="8dp"
				android:text="@string/add_a_card_text"/>

		</LinearLayout>

		<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="64dp"
			android:fontFamily="@font/opensans_regular"
			android:text="@string/payments"
			android:textColor="@color/black"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<LinearLayout
			android:id="@+id/cardsLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="64dp"
			android:orientation="vertical"
			android:visibility="visible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/textView"
			app:layout_constraintVertical_bias="0.29000002">

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/rvCards"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

			<TextView
				android:id="@+id/tvAddNewCard"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:layout_marginTop="24dp"
				android:fontFamily="@font/opensans_bold"
				android:text="@string/add_new_method"
				android:textColor="@color/colorAccent"
				android:textSize="13sp" />

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<ImageButton
		android:id="@+id/back_btn"
		android:layout_width="@dimen/map_navigation_btn_size"
		android:layout_height="@dimen/map_navigation_btn_size"
		android:layout_marginStart="32dp"
		android:layout_marginBottom="32dp"
		android:background="@drawable/circle_button"
		android:clickable="true"
		android:elevation="5dp"
		android:focusable="true"
		android:layout_alignParentBottom="true"
		android:src="@drawable/ic_keyboard_backspace_black_24dp"
		android:contentDescription="@string/content_description" />

</RelativeLayout>