<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="119dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginStart="32dp"
                android:text="@string/cancel_reasons"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/cancel_tip"
                android:layout_marginTop="4dp"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="23dp"
                android:textSize="14sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_marginStart="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/radio_btn_1"
                    android:checked="true"
                    android:text="@string/cancel_btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/radio_btn_2"
                    android:text="@string/cancel_btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/radio_btn_3"
                    android:text="@string/cancel_btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/back_btn"
                    android:layout_width="@dimen/map_navigation_btn_size"
                    android:layout_height="@dimen/map_navigation_btn_size"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginBottom="22dp"
                    android:background="@drawable/circle_button"
                    android:clickable="true"
                    android:elevation="5dp"
                    android:focusable="true"
                    android:src="@drawable/ic_keyboard_backspace_black_24dp"
                    android:contentDescription="@string/content_description" />

                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="134dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="26dp"
                    android:layout_marginBottom="22dp"
                    app:cardCornerRadius="21dp"
                    app:cardElevation="7dp">

                    <ImageView
                        android:id="@+id/confirm_button"
                        android:layout_width="140dp"
                        android:layout_height="73dp"
                        android:paddingEnd="5dp"
                        android:paddingStart="0dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_confirm_button"
                        android:contentDescription="@string/content_description" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>